--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="https://github.com/bkheil01/Assignment6/tree/master">AngularJs(code)</a>
+                        <a href="https://github.com/bkheil01/Assignment6Part1/tree/master">AngularJs(code)</a>
                     </li>
                     <li>
-                        <a href="http://bkheil01.github.io/Assignment6/">Working App</a>
+                        <a href="http://bkheil01.github.io/Assignment6Part1/">Working App</a>
                     </li>
                 </ul>
             </div>
