First paragraph of node post

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
 		
 		<hr>
 		
+		<p class="lead">Node.js is meant for building scaleable network applications by way of an asynchronous, event-driven framework built on top of Chrome's JavaScript engine. You can use it just like you would JavaScript except you can interact with the file system, start up HTTP or TCP servers by using C and C++.</p>
+		
                 <!-- Date/Time -->
                 <p><span class="glyphicon glyphicon-time"></span> Posted on January 10, 2015 at 9:00 PM</p>
 
