--- a/index.html
+++ b/index.html
@@ -85,8 +85,12 @@
 		
 		<hr>
 		
-		<p class="lead">Node.js is meant for building scaleable network applications by way of an asynchronous, event-driven framework built on top of Chrome's JavaScript engine. You can use it just like you would JavaScript except you can interact with the file system, start up HTTP or TCP servers by using C and C++.</p>
-		
+		<p class="lead">Node.js is meant for building scaleable network applications by way of an asynchronous, event-driven framework built on top of Chrome's JavaScript engine. You can use it just like you would JavaScript except you can interact with the file system or start up HTTP or TCP servers by using C and C++.</p>
+		<p>Node is single-threaded, which means that it executes one portion of code at a time and it uses a concurrency model based on an event loop. Node is also non-blocking which means that it will not make the program wait. Instead of making the program wait it will register a callback so that the current program may continue. This basically means that it can handle multiple events without using multiple threads of execution. This means that it can scale well. </p>
+		<p>The main reason Node.js is different than most server-side languages is the fact that all of its libraries were created to be non-blocking, allowing the user to multitask instead of having to wait on the current program.</p>
+                
+                <hr>
+                
                 <!-- Date/Time -->
                 <p><span class="glyphicon glyphicon-time"></span> Posted on January 10, 2015 at 9:00 PM</p>
 
@@ -102,9 +106,10 @@
                 <p>First I created a file called tutorialsService.js where I create an app that will take my tutorials.json file and turn all of the json strings into html objects that will be displayed in a table. </p>
                 <p>I created a service in the app called tutorialsService which is a function that accepts two parameters: $http and $q. $http allows us to call to our tutorials.json file and $q.defer() is stored in a variable called deferred. This means that anything can be stored in the variable deferred so whatever information is stored in that variable can be used later. In this case I store the data from our json file in the deferred variable. All of that is done in this statement:  var deferred = $q.defer(); $http.get("tutorials.json").then(function (data) {deferred.resolve(data);});</p>
                 <p>The next function is called getInformatives and it will return all of the information that is stored in the deferred variable.</p>
-				<p>The last thing in the tutorialsService.js file is the creation of the controller, tutorialsCtrl. This controller has a function that accepts two parameters, $scope and the all of the information in the tutorialsService app. First the controller calls the promise that the deferred variable made which contains all of the data from the json file and it assigns it to the scope and finally displays the information to the console just to confirm that all of the information is being processed correctly into the controller.</p>  
+		<p>The last thing in the tutorialsService.js file is the creation of the controller, tutorialsCtrl. This controller has a function that accepts two parameters, $scope and the all of the information in the tutorialsService app. First the controller calls the promise that the deferred variable made which contains all of the data from the json file and it assigns it to the scope and finally displays the information to the console just to confirm that all of the information is being processed correctly into the controller.</p>  
                 <p>The final part of this angular app is in the body of the table in our index.html form. data-ng-repeat="informative in informatives" loops through each tutorial object in the json file and displays them in the corresponding columns inside the curly brackets. For instance {{informative.title}} calls the title of each tutorial and displays it inside the table data tags <td></p>
-				<hr>
+		
+		<hr>
 
                 <!-- Blog Comments -->
 
