--- a/index.html
+++ b/index.html
@@ -229,6 +229,15 @@
 
                 <!-- Side Widget Well -->
                 <div class="well">
+                    <h3>Downloads</h3>
+                    <h4>Download Node.js Here!</h4>
+                    <div class="row">
+                    	<div class="col-lg-12">
+                    		<ul class="list-unstyled">
+                    			<li><a href="http://nodejs.org/">Node.js</a></li>
+                    		</ul>
+                    	</div>
+                    </div>
                     <h4>Download Angular Here!</h4>
                     <div class="row">
                         <div class="col-lg-12">
