--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand">Brett Heil's Blog</a>
+                <a class="navbar-brand">AngularJs Blog</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -173,18 +173,7 @@
 
                 <!-- Blog Categories Well -->
                 <div class="well">
-                    <h3>Tutorials</h3>
-                    <h4>Some Node.js tutorials:</h4>
-                    <div class="row">
-                    	<div class="col-lg-12">
-                    		<ul class="list-unstyled">
-                    			<li><a href="https://www.youtube.com/watch?v=jo_B4LTHi3I">Intro to Node w/ Ryan Dahl</a></li>
-                    			<li><a href="https://www.airpair.com/javascript/node-js-tutorial">AirPair</a></li>
-                    			<li><a href="https://www.codeschool.com/courses/real-time-web-with-node-js">CodeSchool</a></li>
-                    		</ul>
-                    	</div>
-                    </div>
-                    <h4>Some AngularJs tutorials:</h4>
+                    <h4>Other good AngularJs tutorials:</h4>
                     <div class="row">
                         <div class="col-lg-12">
                             <ul class="list-unstyled">
@@ -205,15 +194,6 @@
 
                 <!-- Side Widget Well -->
                 <div class="well">
-                    <h3>Downloads</h3>
-                    <h4>Download Node.js Here!</h4>
-                    <div class="row">
-                    	<div class="col-lg-12">
-                    		<ul class="list-unstyled">
-                    			<li><a href="http://nodejs.org/">Node.js</a></li>
-                    		</ul>
-                    	</div>
-                    </div>
                     <h4>Download Angular Here!</h4>
                     <div class="row">
                         <div class="col-lg-12">
